[gd_scene load_steps=5 format=2]

[ext_resource path="res://Managing/Interaction/Iteraction.tscn" type="PackedScene" id=1]
[ext_resource path="res://Entities/NPC/NPC.gd" type="Script" id=2]
[ext_resource path="res://Entities/NPC/Dialog/Dialog.tscn" type="PackedScene" id=4]

[sub_resource type="Animation" id=1]
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("ScaleHelper/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}

[node name="NPC" type="KinematicBody2D"]
collision_layer = 0
script = ExtResource( 2 )

[node name="ScaleHelper" type="Node2D" parent="."]

[node name="Sprite" type="Sprite" parent="ScaleHelper"]
position = Vector2( 0, -18 )
flip_h = true
hframes = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]

[node name="Iteraction" parent="." instance=ExtResource( 1 )]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "Default"
anims/Default = SubResource( 1 )

[node name="Dialog" type="Node2D" parent="."]
z_index = 4096

[node name="Dialog" parent="Dialog" instance=ExtResource( 4 )]

[connection signal="interaction" from="Iteraction" to="." method="_on_interaction"]
[connection signal="done" from="Dialog/Dialog" to="." method="_on_dialog_finished"]
